<resources>
    <string name="app_name">ToDoApp</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_item">Add a new item...</string>
    <string name="pick_date">Due date...</string>
    <string name="add_note">Add description...</string>
    <string name="priority_prompt">Priority</string>
    <string name="status_prompt">Status</string>
    <string name="name">Name</string>
    <string name="dueDate">Due Date</string>
    <string name="notes">Notes</string>
    <string name="priority">Priority</string>
    <string name="status">Status</string>
</resources>
