<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.todoapp.AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_view_detail"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:shrinkColumns="1"
            android:stretchColumns="1"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TableRow android:layout_height="wrap_content" android:minHeight="60px"
                android:layout_width="fill_parent">
                <TextView
                    android:textSize="20sp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:text="@string/name" />
                <EditText
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text=""
                    android:ems="10"
                    android:id="@+id/etEditText"
                    android:hint="@string/add_item" />
            </TableRow>

            <TableRow android:layout_height="wrap_content" android:minHeight="60px"
                android:layout_width="fill_parent">
                <TextView
                    android:textSize="20sp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:text="@string/notes" />
                <EditText
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text=""
                    android:ems="10"
                    android:id="@+id/noteEditText"
                    android:hint="@string/add_note" />
            </TableRow>

            <TableRow android:layout_height="wrap_content" android:minHeight="60px"
                android:layout_width="fill_parent">
                <TextView
                    android:textSize="20sp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:text="@string/priority" />
                <Spinner
                    android:layout_marginLeft="10dp"
                    android:id="@+id/prioritySpinner"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:entries="@array/priority_array"
                    android:prompt="@string/priority_prompt" />
            </TableRow>

            <TableRow android:layout_height="wrap_content" android:minHeight="60px"
                android:layout_width="fill_parent">
                <TextView
                    android:textSize="20sp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:text="@string/status" />
                <Spinner
                    android:layout_marginLeft="10dp"
                    android:id="@+id/statusSpinner"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:entries="@array/status_array"
                    android:prompt="@string/status_prompt" />
            </TableRow>

            <TableRow android:layout_height="wrap_content" android:minHeight="60px"
                android:layout_width="fill_parent">
                <TextView
                    android:textSize="20sp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:text="@string/dueDate" />
                <DatePicker
                    android:layout_marginLeft="10dp"
                    android:id="@+id/dpResult"
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

        </TableLayout>
    </LinearLayout>
</RelativeLayout>
